explicit intent dengan membawa parcelable obkect

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,10 @@
         android:layout_height="wrap_content"
         android:text="@string/move_with_data" />
 
+    <Button
+        android:id="@+id/btn_parcelable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/move_with_object" />
+
 </LinearLayout>
