--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="@string/move_with_object" />
 
+    <Button
+        android:id="@+id/btn_dial"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dial_a_number" />
+
 </LinearLayout>
